dev/Styles/SquireUI.less
.squire-toolbar {
	overflow-x: auto;
	overflow-y: hidden;
	white-space: nowrap;
}

.squire-toolgroup {
	display: inline-block;
	margin: 0 .25em 0 0;
}

.squire-toolgroup > button,
.squire-toolgroup > select,
.squire-toolgroup > input[type="color"] {
	background: transparent;
	border: 0;
	box-shadow: none;
	color: #000;
	cursor: pointer;
	font-size: 14px;
	height: 1.5em;
	line-height: 1.7;
	margin: 0;
	padding: 0;
	vertical-align: bottom;
	width: 2em;
}

.squire-toolgroup button:hover, .squire-toolgroup button.active {
	background: #f0f0f0;
}

.squire-toolgroup select {
	width: 7em !important;
}
.squire-toolgroup select[data-action="fontSize"] {
	width: 4em !important;
}
.squire-toolgroup select[data-action="bold"] {
	font-weight: bold;
}
.squire-toolgroup select[data-action="italic"] {
	font-style: italic;
}
/*
.squire-toolgroup select[data-action="underline"] {
	text-decoration: underline;
}
.squire-toolgroup select[data-action="strikethrough"] {
	text-decoration: line-through;
}
*/

.squire-wysiwyg {
	box-sizing: border-box;
	overflow: auto;
}

.squire-wysiwyg, .squire-plain {
	min-height: 200px;
	padding: .5em;
}

.squire-plain {
	width: 100%;
}

.squire-plain {
	display: none;
}
.squire-mode-plain .squire-wysiwyg {
	display: none;
}
.squire-mode-plain .squire-plain {
	display: block;
}
.squire-mode-plain .squire-toolgroup:not(#squire-toolgroup-mode) {
	display: none;
}

/* @media (hover: none) */
.rl-mobile .squire-toolbar {
	padding: 1px;
	position: fixed;
	bottom: 0;
	left: 0;
	right: 0;
}
.rl-mobile .squire-toolgroup > button,
.rl-mobile .squire-toolgroup > select,
.rl-mobile .squire-toolgroup > input[type="color"] {
	height: 2.5em;
	line-height: 2.8;
	width: 3em;
}

.rl-mobile #rl-popups .b-compose.modal,
.rl-mobile #rl-popups .b-identity-content.modal {
	margin-bottom: 50px;
}
.rl-mobile .b-compose.modal {
	min-height: calc(100% - 62px);
}

